# crypto_price_analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  config.py  data_collector.py  data_processor.py  main.py
