[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analysis"
version = "0.1.0"
description = "Cryptocurrency price analysis tool"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
] 